# cpp-gui-template-sdl2

./: .clang-format  .clang-tidy  .gitattributes  .gitattributes_example  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  README.md  litr.toml  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: cmake.yml  release.yml
cmake/: AppleBuild.cmake  CompilerWarnings.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  UniversalAppleBuild.cmake
docs/: ApplicationIcons.md  BuildAndExecution.md  CMakePresets.md  Dependencies.md  Fonts.md  HighDPISupport.md  Logging.md  MakeItYourOwn.md  Packaging.md  PlatformCode.md  Profiling.md  QuickStart.md  README.md  Testing.md  WhereIsWhat.md
overlay_ports/cef-prebuilt/: CMakeLists.txt  portfile.cmake  vcpkg.json
packaging/: CMakeLists.txt  Description.txt  License.txt  Readme.txt  Welcome.txt
packaging/dmg/: AppDMGBackground.tiff  AppDMGSetup.scpt  README.md
packaging/dmg/background-set/: AppDMGBackground.tiff  AppDMGBackground@2x.tiff  README.md
packaging/dmg/resources/: AppDMGBackground.tiff
packaging/nsis/: README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  Info.plist  app.rc
src/app/App/: Main.cpp
src/app/Manifests/: App.desktop  App.desktop.in  Info.plist
src/app/cmake/: AppAssets.cmake  Packaging.cmake
src/app/cmake/packaging/: Darwin.cmake  Linux.cmake  Windows.cmake
src/assets/: CMakeLists.txt
src/assets/icons/: README.md  icon.icns
src/core/: CMakeLists.txt
src/core/Core/: Application.cpp  Application.hpp  DPIHandler.hpp  Log.cpp  Log.hpp  Resources.hpp  Window.cpp  Window.hpp
src/core/Core/Debug/: Instrumentor.hpp
src/core/Platform/: LinuxResources.cpp  MacResources.cpp  WindowsResources.cpp
src/core/Platform/Linux/: DPIHandler.cpp  DPIhandler.cpp  Resources.cpp
src/core/Platform/Mac/: DPIHandler.cpp  DPIhandler.cpp  Resources.cpp
src/core/Platform/Windows/: DPIHandler.cpp  DPIhandler.cpp  Resources.cpp
src/core/Tests/: CMakeLists.txt  Resources.spec.cpp
src/settings/: CMakeLists.txt
src/settings/Settings/: Project.cpp.in  Project.hpp
src/some_library/: CMakeLists.txt
src/some_library/SomeLibrary/Core/: Log.cpp
src/some_library/SomeLibrary/Debug/: Instrumentor.hpp
src/tests/: CMakeLists.txt  TestRunner.cpp
